# ufpa-prog1-kawaii2

./: .gitignore  meson.build  readme.md  readme.pt-BR.md  relatorio.rb
include/: pokedex.hpp  pokedex_pokemon_entry.hpp  pokemon.hpp
include/graphical/: pokedex.hpp
src/: dex.txt  meson.build  pokedex.cpp  pokemon.cpp
src/cli/: main.cpp
src/command_line/: main.cpp  pokedex.cpp
src/graphical/: main.cpp  pokedex.cpp
src/gui/: main.cpp
subprojects/: raygui.wrap
subprojects/packagefiles/raygui/: meson.build
test/: dex.txt  pokepull.py
